ENT-855 fixing minor style issue where button texts don't vertically align
ENT-855 Fixing typo in css class name

Removing unused class name from data sharing permissions test

--- a/enterprise/static/enterprise/sass/partials/views/_data_sharing_consent.scss
+++ b/enterprise/static/enterprise/sass/partials/views/_data_sharing_consent.scss
@@ -78,13 +78,17 @@
   }
 }
 
+.policy-dropdown-link {
+  text-decoration: underline;
+}
+
 .failure-link {
   color: #0075B4;
   display: inline-block;
   text-decoration: underline;
   border: none;
   background-color: rgba(0, 0, 0, 0);
-  padding: 0 !important;
+  padding: 10px 15px;
   vertical-align: bottom;
   font-size: 16px;
 
